--- a/src/PAGES/settings.html
+++ b/src/PAGES/settings.html
@@ -50,6 +50,7 @@
     <input type="text" id="student-CAN-ID" name="student-CAN-ID" placeholder="Student CAN-ID" required>
     <input type="text" id="student-fullname" name="student-fullname" placeholder="Student Full Name" required>
     <input type="email" id="student-email" name="student-email" placeholder="Student Email" required>
+    <input type="text" id="student-phone" name="student-phone" placeholder="Student Phone Number" required>
     <input type="text" id="student-username" name="student-username" placeholder="Student Username" required>
     <input type="password" id="student-password" name="student-password" placeholder="Student Password" required>
     <button id="registerStudentBtn" class="submit">Register Student</button>
