changes in the forgot passcode js and conteroller and server in the code

--- a/src/PAGES/loginpage.html
+++ b/src/PAGES/loginpage.html
@@ -75,7 +75,7 @@
                         <input type="text" placeholder=" " id="forgotPhone" />
                         <label>Enter Phone</label>
                       </div>
-                      <button type="button" onclick="verifyPhone()">Verify</button>
+                      <button type="button" onclick="verifyForgotPhone()">Verify</button>
                     </div>
                   
                     <div id="step2" style="display: none;">
