changes in the dashboard.css in the enquiry table and Latest 10 Student Registrations

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -196,7 +196,7 @@
 			</div>
 
 
-			<div>
+			<div class="enquiries">
 				<div class="table">
 					<div class="head">
 						<h3>Latest 10 Student Registrations</h3>
