changes in the dashboard.css in the enquiry table and Latest 10 Student Registrations

--- a/src/PAGES/updateBatchStatus.html
+++ b/src/PAGES/updateBatchStatus.html
@@ -14,37 +14,37 @@
 
 <body>
 
-   <!-- Header -->
-	<header class="header">
-		<!-- Left: Logo -->
-		<div class="logo">
-			<img src="../img/Medhalogo.png" alt="Medhalogo">
-		</div>
+    <!-- Header -->
+    <header class="header">
+        <!-- Left: Logo -->
+        <div class="logo">
+            <img src="../img/Medhalogo.png" alt="Medhalogo">
+        </div>
 
-		<!-- Right: Menu, Notifications, Profile -->
-		<div class="right-section">
-			<span class="menu-icon material-icons">menu</span>
+        <!-- Right: Menu, Notifications, Profile -->
+        <div class="right-section">
+            <span class="menu-icon material-icons">menu</span>
 
-			<!-- Notification Icon -->
-			<div class="notification-icon">
-				<span class="material-icons">notifications</span>
-				<span class="badge">3</span> <!-- Badge for new notifications -->
-				<div class="notification-dropdown">
-					<p>No new notifications</p>
-				</div>
-			</div>
+            <!-- Notification Icon -->
+            <div class="notification-icon">
+                <span class="material-icons">notifications</span>
+                <span class="badge">3</span> <!-- Badge for new notifications -->
+                <div class="notification-dropdown">
+                    <p>No new notifications</p>
+                </div>
+            </div>
 
-			<!-- Profile Icon -->
-			<div class="profile-icon">
-				<span class="material-icons">account_circle</span>
-				<div class="profile-dropdown">
-					<a href="#"><span class="material-icons">account_circle</span> Profile</a>
-					<a href="settings.html"><span class="material-icons">settings</span> Settings</a>
-					<a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
-				</div>
-			</div>
-		</div>
-	</header>
+            <!-- Profile Icon -->
+            <div class="profile-icon">
+                <span class="material-icons">account_circle</span>
+                <div class="profile-dropdown">
+                    <a href="#"><span class="material-icons">account_circle</span> Profile</a>
+                    <a href="settings.html"><span class="material-icons">settings</span> Settings</a>
+                    <a href="loginpage.html"><span class="material-icons">logout</span> Logout</a>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- Sidebar Navigation -->
     <nav class="sidebar">
@@ -107,10 +107,10 @@
             <span class="material-icons toggle-icon FInance-toggle">expand_more</span>
         </div>
         <div class="submenu FInance-submenu">
-            <a href="dailypayments.html"><span class="material-icons"><span class="material-symbols-outlined">
+            <a href="batchpayments.html"><span class="material-icons"><span class="material-symbols-outlined">
                         payments
                     </span></span> Batch Payments</a>
-            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+            <a href="dailytransactions.html"><span class="material-icons">visibility</span> Daily Payments</a>
         </div>
 
         <a href="#"><span class="material-icons">analytics</span> Analytics</a>
@@ -120,15 +120,17 @@
 
     <!-- Main Content -->
     <main class="main-content">
-        <div class="container">
+        <div class="wapper">
             <h1>Batch Management</h1>
-
-            <label for="statusFilter">Filter Batches:</label>
-            <select id="statusFilter">
-                <option value="ON Going">ON Going</option>
-                <option value="Completed">Completed</option>
-                <option value="Up Coming">Up Coming</option>
-            </select>
+            <div>
+                <label for="statusFilter">Filter Batches:</label>
+                <select id="statusFilter">
+                    <option value="ON Going">ON Going</option>
+                    <option value="Completed">Completed</option>
+                    <option value="Up Coming">Up Coming</option>
+                </select>
+ 
+            </div>
 
             <table>
                 <thead>
