--- a/src/PAGES/viewstudent.html
+++ b/src/PAGES/viewstudent.html
@@ -150,26 +150,27 @@
 				</div>
 			</div>
 
-
-			<table style="font-size: 12px;">
-				<thead>
-					<tr>
-						<th>Student ID</th>
-						<th>Status</th>
-						<th>Batch Code</th>
-						<th>Course</th>
-						<th>FULL NAME</th>
-						<th>Phone</th>
-						<th>Course Fee</th>
-						<th>Discount</th>
-						<th>Total Fee</th>
-						<th>Total Due</th>
-						<th>Actions</th>
-						<th>Certificate</th>
-					</tr>
-				</thead>
-				<tbody id="studentTableBody" style="font-size: 12px;"></tbody>
-			</table>
+			<div class="table-scroll">
+				<table style="font-size: 12px;">
+					<thead>
+						<tr>
+							<th>Student ID</th>
+							<th>Status</th>
+							<th>Batch Code</th>
+							<th>Course</th>
+							<th>FULL NAME</th>
+							<th>Phone</th>
+							<th>Course Fee</th>
+							<th>Discount</th>
+							<th>Total Fee</th>
+							<th>Total Due</th>
+							<th>Actions</th>
+							<th>Certificate</th>
+						</tr>
+					</thead>
+					<tbody id="studentTableBody" style="font-size: 12px;"></tbody>
+				</table>
+			</div>
 
 			<!-- Modal -->
 			<div id="certificateModal" style="display: none;
